--- a/views/particular.ejs
+++ b/views/particular.ejs
@@ -151,7 +151,7 @@
           <input type="text" class="border rounded-md p-2 w-full" id="days_open" name="OpenDays" value="Monday - Saturday (no holidays)" required>
         </div>
       </div>
-      <input type="hidden" name="PropertyId" value="<%= PropertyId %>">
+      <input type="hidden" name="P_ID" value="<%= P_ID %>">
       <button type="submit" class="mt-6 w-full bg-blue-500 text-white font-bold py-2 rounded-md">Submit</button>
     </form>
   </div>
