--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -47,7 +47,7 @@
           <option value="Mastercard" selected>Mastercard</option>
         </select>
       </div>
-      <input type="text" name="PropertyId" value="<%= PropertyId %>" hidden>
+      <input type="text" name="P_ID" value="<%= P_ID %>" hidden>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
