--- a/views/receiver.ejs
+++ b/views/receiver.ejs
@@ -184,7 +184,7 @@
       </div>
 
       <!-- Hidden Property ID Field -->
-      <input type="hidden" name="PropertyId" value="<%= PropertyId %>">
+      <input type="hidden" name="P_ID" value="<%= P_ID %>">
 
       <!-- Submit Button -->
       <div class="flex justify-center">
