--- a/views/reciever.ejs
+++ b/views/reciever.ejs
@@ -564,7 +564,7 @@
           </select>
         </div>
       </div>
-      <input type="text" name="PropertyId" value="<%= PropertyId %>" hidden>
+      <input type="text" name="P_ID" value="<%= P_ID %>" hidden>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
