--- a/views/tenant.ejs
+++ b/views/tenant.ejs
@@ -111,7 +111,7 @@
         <!-- Same "Previous" and "Submit" buttons for Tenant 4 -->
       </div>
 
-      <input type="text" name="PropertyId" value="<%= PropertyId %>" hidden>
+      <input type="text" name="P_ID" value="<%= P_ID %>" hidden>
       <!-- Submit Button (hidden initially) -->
       <button id="submitBtn" type="submit" class="hidden w-full py-2 mt-4 bg-green-600 text-white rounded-md text-sm font-semibold hover:bg-green-700">
         Submit
