TEN in check.ejs

--- a/views/check.ejs
+++ b/views/check.ejs
@@ -14,8 +14,8 @@
   <div style="width: 21cm; padding: 1.5cm;">
     <h3 class="text-center pb-3 pt-3">3 DAY NOTICE - PAY RENT OR QUIT</h3>
     <p>
-      TO: <%= data.Tenants[0].fname %>
-        <%= data.Tenants[0].lname %>, AND ALL OTHERS IN POSSESSION of the premises now held and/or
+      TO: <%= data.TENs[0].fname %>
+        <%= data.TENs[0].lname %>, AND ALL OTHERS IN POSSESSION of the premises now held and/or
           occupied by you.
     </p>
     <p>
