PARTICULAR in check.ejs

--- a/views/check.ejs
+++ b/views/check.ejs
@@ -27,7 +27,7 @@
       PLEASE TAKE NOTICE that you are justly indebted to the owner of the herein described
       premises; and notice is hereby given that pursuant to the lease and/or rental agreement under
       which you hold possession, there is now due, unpaid and delinquent rent in the total sum
-      of <%= data.Particular.Written %> Dollars($<%= data.Particular.Dollars %>).
+      of <%= data.PARTICULAR.Written %> Dollars($<%= data.PARTICULAR.Dollars %>).
     </p>
     <p>
       WITHIN THREE (3) DAYS excluding Saturdays, Sundays and other judicial holidays after
@@ -36,13 +36,13 @@
       and/or his authorized agent.
     </p>
     <p>
-      Your payment should be payable to <%= data.Particular.PayToFirst %>
-        <%= data.Particular.PayToLast %> and payment shall be delivered at the
-          following address <%= data.Particular.address %>, <%= data.Particular.st %>, <%=
-                data.Particular.zip %>. Rents are paid to <%= data.Particular.PayToFirst %>
-                  <%= data.Particular.PayToLast %> who is usually available on the following days: <%=
-                      data.Particular.OpenDays %> weekly. Hours of
-                      <%= data.Particular.OpenHours %> daily.
+      Your payment should be payable to <%= data.PARTICULAR.PayToFirst %>
+        <%= data.PARTICULAR.PayToLast %> and payment shall be delivered at the
+          following address <%= data.PARTICULAR.address %>, <%= data.PARTICULAR.st %>, <%=
+                data.PARTICULAR.zip %>. Rents are paid to <%= data.PARTICULAR.PayToFirst %>
+                  <%= data.PARTICULAR.PayToLast %> who is usually available on the following days: <%=
+                      data.PARTICULAR.OpenDays %> weekly. Hours of
+                      <%= data.PARTICULAR.OpenHours %> daily.
     </p>
     <p>
       PLEASE TAKE FURTHER NOTICE that unless you pay the rent in full OR vacate the premises
