OWN in check.ejs

--- a/views/check.ejs
+++ b/views/check.ejs
@@ -65,8 +65,8 @@
       no items that need to be corrected at this time.
     </p>
     <p>
-      Personally Served [ ] or Conspicuously Posted [ ] by <%= data.Landlord.fname %>
-        <%= data.Landlord.lname %> or Agent AGENT
+      Personally Served [ ] or Conspicuously Posted [ ] by <%= data.OWN.fname %>
+        <%= data.OWN.lname %> or Agent AGENT
           NAME
     </p>
     <br>
