O_ID instead of LandloadId

--- a/views/property.ejs
+++ b/views/property.ejs
@@ -118,7 +118,7 @@
           <input type="number" id="numunits" name="numunits" class="w-full p-2 border border-gray-300 rounded text-sm">
         </div>
       </div>
-      <input type="hidden" name="LandlordId" value="<%= LandlordId %>">
+      <input type="hidden" name="O_ID" value="<%= O_ID %>">
       <button type="submit"
         class="w-full mt-4 py-2 bg-blue-600 text-white rounded-md text-sm font-semibold hover:bg-blue-700">
         Submit
